[project]
name = "sqlalchemy-postgres-point"
version = "0.1.0"
description = "Lightweight SQLAlchemy custom type for PostgreSQL POINT columns with tuple binding and an earth-distance comparator."
keywords = [
    "sqlalchemy",
    "postgresql",
    "point",
    "geometry",
    "geospatial",
    "gis",
    "database",
    "types",
    "earthdistance",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sqlalchemy>=2.0"]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/sqlalchemy-postgres-point" }


[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "sqlmodel>=0.0.32",
    "psycopg[binary]>=3.2.0",
    "activemodel>=0.15.0",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["sqlalchemy_postgres_point"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
